yaml/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:132464628555:certificate/18993183-7cfe-4bc8-88a7-2a55de143405
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
  labels:
    name: myingress
spec:
  tls:
    - hosts:
        - www.yonggyu.com
      secretName: tls-crt 
  rules:
  - host: www.yonggyu.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myweb
            port: 
              number: 80
